--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,8 +6,8 @@
     <meta name="description" content="Message Board" />
     <meta name="author" content="Azat Mardan" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link type="text/css" rel="stylesheet" href="/css/bootstrap-responsive.min.css" />
+    <link type="text/css" rel="stylesheet" href="/apps/community/css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="/apps/community/css/bootstrap-responsive.min.css" />
   </head>
   <body>
     <div class="container-fluid">
@@ -29,7 +29,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="community/js/bundle.js"></script>
-    <script type="text/javascript" src="js/bundle.js"></script>
+    <script type="text/javascript" src="/apps/community/js/bundle.js"></script>
   </body>
 </html>
